--- a/NotebookAndGuide.ipynb
+++ b/NotebookAndGuide.ipynb
@@ -4,9 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "-QinyyM9LQQJ"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,10 +352,36 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## CNN Input Shape\n",
+        "When defining the architecture of your CNN model for multiple image input, it is important to pay attention to the input shape. The number of channels should be set to either two or six, depending on how the data was preprocessed. For example:\n",
+        "\n",
+        "- input_shape=(256, 256, 2) for greyscale image input\n",
+        "- input_shape=(256, 256, 6) for RGB image input\n",
+        "\n",
+        "This notebook provides easy-to-use code for preprocessing your data, and the variables in the code can be used to easily set the input shape for your model. It is important to ensure that the input shape matches the preprocessed data to ensure the model can train correctly."
+      ],
+      "metadata": {
+        "id": "3Cfe1O2D1_xJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_shape=(width, height, channels)"
+      ],
+      "metadata": {
+        "id": "qe6lJXsn1_HP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Appendix"
       ],
       "metadata": {
-        "id": "LjJfGjI5LNjH"
+        "id": "FvAyneo94ZDu"
       }
     },
     {
